Update format on the School page

--- a/app/assets/stylesheets/sass/1-base/_typography.sass
+++ b/app/assets/stylesheets/sass/1-base/_typography.sass
@@ -86,8 +86,8 @@ h6
   line-height: 13px
 
 p, li
-  font-size: 1.2em
-  line-height: 1.2em
+  font-size: 1.25em
+  line-height: 1.5em
   font-family: 'proxima-nova', sans-serif
   font-weight: 400
   color: $body-type-grey
@@ -96,7 +96,7 @@ p, li
   color: white
 
 .yellow-text
-  color: $yellow
+  color: $yellow !important
 
 .ltyellow-text
   color: $ltyellow
@@ -122,4 +122,4 @@ ul
     font-weight: 300
     color: white
     a:hover
-      text-decoration: underline
+      text-decoration: none
