--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -135,13 +135,15 @@
                   </div>
 
                   <div class="nav-column">
-                    <h3>SPONSOR</h3>
-                    <ul>
+                    <h3 class="yellow-text"><%= link_to 'SPONSOR', students_path %></h3>
+                    <hr>
+                    <!-- <ul>
                       <li><%= link_to 'Sponsor a Student', students_path %></li>
                       <li><a href="/students#causes">Invest in campus</a></li>
-                    </ul>
-                    <h3><%= link_to 'DONATE', new_charge_path%></h3>
-                    <h3><%= link_to 'CONNECT WITH US', contacts_path %></h3>
+                    </ul> -->
+                    <h3 class="yellow-text"><%= link_to 'DONATE', new_charge_path%></h3>
+                    <hr>
+                    <h3 class="yellow-text"><%= link_to 'CONTACT', contacts_path %></h3>
                   </div>
                 </div>
               </li>
