--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -7,141 +7,168 @@
 </div>
 
 <div class="flex page-canvas ">
-  <div class="flex-item-1col row">
-    <div class="col-sm-6 mt-4">
-      <p>The Mungere School is the first middle and high school available to kids in the rural community of Mungere, Tanzania. Every year more than 200 families apply for one of the 30-40 available spots in the incoming class.
-      When completed, The Mungere Campus will serve over 300 students each year, with students in grades 6-12.
-      </p>
-      <h5><strong>THE AVERAGE SCHOOL LACKS THE INFRASTRUCTURE TO EFFECTIVELY EDUCATE STUDENTS</strong></h5>
-      <p>In Tanzania, secondary schools have incredibly high student-to-teacher ratios, teachers must utilize outdated books and learning materials, and facilities are limited. All formal exams in Tanzania are given in English, but many private secondary schools still teach in Swahili, due to teacher shortages and lack of proficiency.</p>
-      <h5><strong>STILL THE AVERAGE FAMILY CAN'T AFFORD TO SEND THEIR KIDS TO SCHOOL</strong></h5>
-      <p>
-      While elementary school in Tanzania is free, middle and high school costs about USD $500 per year, making it highly cost prohibitive when the average family income is roughly USD $530</p>
+  <div class="flex-item-1col">
+    <div class="row">
+      <div class="col-sm-6">
+        <p class="lead">The Mungere School is the first middle and high school available to kids in the rural community of Mungere, Tanzania. Every year more than 200 families apply for one of the 30-40 available spots in the incoming class.
+        When completed, The Mungere Campus will serve over 300 students each year, with students in grades 6-12.
+        </p>
+        <br/>
+        <p><strong>THE AVERAGE SCHOOL LACKS THE INFRASTRUCTURE TO EFFECTIVELY EDUCATE STUDENTS</strong></p>
+        <p>In Tanzania, secondary schools have incredibly high student-to-teacher ratios, teachers must utilize outdated books and learning materials, and facilities are limited. All formal exams in Tanzania are given in English, but many private secondary schools still teach in Swahili, due to teacher shortages and lack of proficiency.</p>
+        <br/>
+        <p><strong>STILL THE AVERAGE FAMILY CAN'T AFFORD TO SEND THEIR KIDS TO SCHOOL</strong></p>
+        <p>
+        While elementary school in Tanzania is free, middle and high school costs about USD $500 per year, making it highly cost prohibitive when the average family income is roughly USD $530 per year. </p>
+        <br/>
+        <br/>
+      </div>
+      <div class="col-sm-6">
+       <p>Even when families make great sacrifices to send a child to school, there is no guarantee of the quality of education. For students living in rural areas, attending middle or high school usually means traveling great distances daily, which can be both dangerous and exhausting.
+        </p>
+        <br/>
+        <p><strong>AFFORDABLE AND ACCESSIBLE</strong></p>
+        <p>Families invest only USD $15 per year total to cover their child's entire education. While their financial contribution doesn't cover all expenses, it pays for operating costs at the school, solidifying each family's commitment. The school is centrally located within the village, protecting students from the vulnerability of travel and giving them much-needed time to study.</p>
+        <br/>
+
+        <p><strong>SOMETIMES IT REALLY DOES TAKE A VILLAGE</strong></p>
+        <p>The Parent Action Committee as well as the local tribal government are actively involved with the school. Community meetings are held regularly to share ideas and solve problems in a cohesive partnership.</p>
+        </div>
+      </div>
+
     </div>
-    <div class="col-sm-6">
-     <p>per year. Even when families make great sacrifices to send a child to school, there is no guarantee of the quality of education. For students living in rural areas, attending middle or high school usually means traveling great distances daily, which can be both dangerous and exhausting.
-      </p>
-      <h5><strong>THE MUNGERE SCHOOL IS AFFORDABLE AND ACCESSIBLE</strong></h5>
-      <p>Families invest only USD $15 per year total to cover their child's entire education. While their financial contribution doesn't cover all expenses, it pays for operating costs at the school, solidifying each family's commitment. The school is centrally located within the village, protecting students from the vulnerability of travel and giving them much-needed time to study.</p>
-      <h5><strong>SOMETIMES IT REALLY DOES TAKE A VILLAGE</strong></h5>
-      <p>The Parent Action Committee as well as the local tribal government are actively involved with the school. Community meetings are held regularly to share ideas and solve problems in a cohesive partnership.</p>
+  </div>
+</div>
+<hr>
+
+<!-- <div class="blue"> -->
+  <div class="flex page-canvas">
+    <div class="flex-item-1col">
+      <div class="row">
+        <h2>PREPARED FOR SUCCESS</h2>
+        <p class="lead">Preparation is the key to success. Our students work hard for:</p>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <ul><p><strong><i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;
+            A COMPETITIVE, HIGH QUALITY EDUCATION</strong></p>
+            <li>• Our teachers hold advanced degrees and lend local and cultural perspectives. Our teachers have come from from China, Ireland, the United States, Tanzania, Scotland, England, Mexico and Australia to donate their time and talents. All teachers have completed an ESL, CELTA or TESOL training. </li>
+            <li>• Mungere students consistently score in the top quarter of schools in the region and in the top 3 in the district (out of 23 schools) on government-issued tests.</li>
+            <li>• The Tanzania Ministry of Education has recognized Red Sweater Project as a successful school model that gets positive results.
+            </li>
+            <br/>
+            <p><strong><i class="fa fa-handshake-o" aria-hidden="true"></i>&nbsp;
+              AN ATMOSPHERE THAT PROMOTES GENDER EQUALITY</strong></p>
+            <li>• We level the playing field for boys and girls, whether it's in the classroom, on an athletic field or on a debate stage. This approach builds the confidence of female students and teaches all students that everyone has strengths that are not defined or limited by gender. </li>
+          </ul>
+          <br/>
+          <p><strong><i class="fa fa-building" aria-hidden="true"></i>&nbsp;
+            SUSTAINABLY DESIGNED, MODERN FACILITIES</strong></p>
+          <ul>
+            <li>• Solar power throughout campus has been made possible by the volunteer efforts of Engineers without Borders.</li>
+          </ul>
+        </div>
+        <div class="col-sm-6">
+          <ul>
+            <li>• By giving students their own solar-powered lights for late night studying, families save time, money and resources. It is also a healthier alternative to the traditionally-used kerosene lantern.</li>
+            <li>• Our buildings are designed to keep students and faculty cool in the heat and warm when it's cold without the use of consumable fuels.</li>
+          </ul>
+          <br/>
+          <p><strong><i class="fa fa-heartbeat text-center" aria-hidden="true"></i>&nbsp; HEALTH CARE, HEALTH EDUCATION AND SANITATION SERVICES</strong></p>
+          <ul>
+            <li>• Safe drinking water is available to all students.</li>
+            <li>• Health outreach helps to boost health and prevent disease within the community.</li>
+            <li>• If a student becomes ill, they're treated. Illnesses commonly treated include malaria, typhoid and pneumonia.</li>
+            <li>• Two balanced meals are served each day, supplemented with fresh organic vegetables from the school garden. </li>
+            <li>• Gas burners eliminate the school's need for firewood, which would contribute to deforestation.</li>
+            <li>• Campus is equipped with composting toilets and handwashing stations with waste safely recycled to replenish nutrients in the school's garden soil.</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-</div>
+  <hr>
+<!-- </div> -->
 
-<div class="blue">
   <div class="flex page-canvas">
-    <div class="flex-item-1col">
-      <h2>PREPARED FOR SUCCESS</h2>
-      <h5><strong>PREPARATION IS THE KEY TO SUCCESS. OUR STUDENTS WORK HARD FOR:</strong></h5>
-      <br/>
-      <ul><strong>A COMPETITIVE, HIGH QUALITY EDUCATION</strong>
-        <li>• Our teachers hold advanced degrees and lend local and cultural perspectives. Our teachers have come from from China, Ireland, the United States, Tanzania, Scotland, England, Mexico and Australia to donate their time and talents. All teachers have completed an ESL, CELTA or TESOL training. </li>
-        <li>• Mungere students consistently score in the top quarter of schools in the region and in the top 3 in the district (out of 23 schools) on government-issued tests.</li>
-        <li>• The Tanzania Ministry of Education has recognized Red Sweater Project as a successful school model that gets positive results.
-        </li>
-
-        <h5><strong>AN ATMOSPHERE THAT PROMOTES GENDER EQUALITY</strong></h5>
-        <li>• We level the playing field for boys and girls, whether it's in the classroom, on an athletic field or on a debate stage. This approach builds the confidence of female students and teaches all students that everyone has strengths that are not defined or limited by gender. </li>
-      </ul>
-
-      <h5><strong>SUSTAINABLY DESIGNED, MODERN FACILITIES</strong></h5>
-      <ul>
-        <li>• Solar power throughout campus has been made possible by the volunteer efforts of Engineers without Borders.</li>
-        <li>• By giving students their own solar-powered lights for late night studying, families save time, money and resources. It is also a healthier alternative to the traditionally-used kerosene lantern.</li>
-        <li>• Our buildings are designed to keep students and faculty cool in the heat and warm when it's cold without the use of consumable fuels.</li>
-      </ul>
-
-      <h5><strong>HEALTH CARE, HEALTH EDUCATION AND SANITATION SERVICES</strong></h5>
-      <ul>
-        <li>• Safe drinking water is available to all students.</li>
-        <li>• Health outreach helps to boost health and prevent disease within the community.</li>
-        <li>• If a student becomes ill, they're treated. Illnesses commonly treated include malaria, typhoid and pneumonia.</li>
-        <li>• Two balanced meals are served each day, supplemented with fresh organic vegetables from the school garden. </li>
-        <li>• Gas burners eliminate the school's need for firewood, which would contribute to deforestation.</li>
-        <li>• Campus is equipped with composting toilets and handwashing stations with waste safely recycled to replenish nutrients in the school's garden soil.</li>
-      </ul>
-    </div>
-  </div>
-</div>
-
-
-  <div class="page-canvas">
-    <div class="flex">
-      <div class="flex-item-1col intro">
+    <div class="col-sm-12">
+      <div class="row">
         <h2>HANDS-ON LEARNING</h2>
-        <p class="description">
+        <p class="lead">
           In addition to their studies in the classroom, students at the Mungere School have the opportunity to participate in our hands-on programs.
         </p>
       </div>
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="img-wrapper">
+            <%= image_tag("focus_store.jpg", :class => "img-responsive")%>
+          </div>
+          <div class="focusCopy">
+            <h5><strong>SMALL BUSINESS SKILLS</strong></h5>
+            <p><em>The School Store</em></p><br/>
+            <ul>
+              <li>• Provides a valued resource for the entire community, where local families can purchase goods and sundries at reasonable prices. The next closest market, a 3km walk away, is only open on select days and has a limited selection.</li>
+              <li>• Operates the first ever solar-powered mobile phone and lantern charging station for community members, keeping families connected.
+              </li>
+              <li>• Gives students the opportunity to apply math and economics coursework to real life scenarios.</li>
+              <li>• All income is reinvested in The Mungere School to offset operational costs.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="img-wrapper">
+            <%= image_tag("school_nutrition.jpg", :class => "img-responsive")%>
+          </div>
+          <div class="focusCopy">
+            <h5><strong>NUTRITION AND AGRICULTURE</strong></h5>
+            <p><em>The Mungere School Garden:</em></p><br/>
+            <ul>
+              <li>• Produces organic food for school meals, reducing operational costs and increasing campus sustainability.</li>
+              <li>• Provides hands-on experience for agriculture class coursework. Many of our students come from pastoral tribes, and the knowledge they gain from hands-on work in the garden is directly applied to their own family's subsistence farming practices.</li>
+              <li>• Creates income. Produce is sold at the school store to fund ongoing operations, while providing affordable, nutritious food to the local community. </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="img-wrapper">
+            <%= image_tag("school_sports.png", :class => "img-responsive")%>
+          </div>
+          <div class="focusCopy">
+            <h5><strong>LEADERSHIP AND TEAMWORK</strong></h5>
+            <p><em>The Mungere Athletics Program</em></p><br/>
+            <ul>
+              <li>• Sometimes lessons in teamwork, dedication and respect are taught best on the football pitch or basketball court. That's why time for athletics is built into each school week and encouraged outside of class.</li>
+              <li>• Promotes gender equality on campus. Ninth grade student Tasiana Kabuka is a prime example. She is the first girl in the region to play on an all-boys soccer team and has been recognized by her fellow classmates as well as by FIFA for her skills and leadership on the soccer pitch.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="flex">
-    <div class="flex-item-3col space-second">
-      <div class="img-wrapper">
-        <%= image_tag("focus_store.jpg", :class => "img-responsive")%>
-      </div>
-      <div class="focusCopy">
-        <h5><strong>SMALL BUSINESS SKILLS</strong></h5>
-        <p><em>The School Store</em></p>
-        <ul>
-          <li>• Provides a valued resource for the entire community, where local families can purchase goods and sundries at reasonable prices. The next closest market, a 3km walk away, is only open on select days and has a limited selection.</li>
-          <li>• Operates the first ever solar-powered mobile phone and lantern charging station for community members, keeping families connected.
-          </li>
-          <li>• Gives students the opportunity to apply math and economics coursework to real life scenarios.</li>
-          <li>• All income is reinvested in The Mungere School to offset operational costs.</li>
-        </ul>
-      </div>
-    </div>
-    <div class="flex-item-3col space-second">
-      <div class="img-wrapper">
-        <%= image_tag("school_nutrition.jpg", :class => "img-responsive")%>
-      </div>
-      <div class="focusCopy">
-        <h5><strong>NUTRITION AND AGRICULTURE</strong></h5>
-        <p><em>The Mungere School Garden:</em></p>
-        <ul>
-          <li>• Produces organic food for school meals, reducing operational costs and increasing campus sustainability.</li>
-          <li>• Provides hands-on experience for agriculture class coursework. Many of our students come from pastoral tribes, and the knowledge they gain from hands-on work in the garden is directly applied to their own family's subsistence farming practices.</li>
-          <li>• Creates income. Produce is sold at the school store to fund ongoing operations, while providing affordable, nutritious food to the local community. </li>
-        </ul>
-      </div>
-    </div>
-    <div class="flex-item-3col space-second">
-      <div class="img-wrapper">
-        <%= image_tag("school_sports.png", :class => "img-responsive")%>
-      </div>
-      <div class="focusCopy">
-        <h5><strong>LEADERSHIP AND TEAMWORK</strong></h5>
-        <p><em>The Mungere Athletics Program</em></p>
-        <ul>
-          <li>• Sometimes lessons in teamwork, dedication and respect are taught best on the football pitch or basketball court. That's why time for athletics is built into each school week and encouraged outside of class.</li>
-          <li>• Promotes gender equality on campus. Ninth grade student Tasiana Kabuka is a prime example. She is the first girl in the region to play on an all-boys soccer team and has been recognized by her fellow classmates as well as by FIFA for her skills and leadership on the soccer pitch.</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
+
 
 <div class="blue">
   <div class="flex page-canvas">
-    <div class="flex-item-2col">
-      <h2>ABOUT TANZANIA, EAST AFRICA</h2>
-      <p>
-        Tanzania is an East African country known for its beautiful wilderness areas. They include the Serengeti National Park, a safari mecca populated by the “big five” game (elephant, lion, leopard, buffalo, rhino), and Kilimanjaro National Park, home to Africa’s highest mountain. Offshore lie the lush tropical islands of Zanzibar and Mafia Marine Park.
-      </p>
-      <p>
-        The Mungere School is located 3 hours from Kilimanjaro airport, next to the great rift wall. Swahili is the national language of Tanzania, but by the time students graduate from Mungere, they are trilingual, speaking English, Swahili and their native tribal tongue such as Kimasai, Kirangi or Kichagga.
-      </p>
-
-      <p>
-        <em><a href="http://travel.nationalgeographic.com/travel/countries/tanzania-photos/#/african-elephant-tanzania_3648_600x450.jpg" target='_blank'>See some beautiful photos by National Geographic</a>
-      </em></p>
-    </div>
-    <div class="page-canvas" id="map-container">
-      <div class="flex-item-2col" id="map">
+    <div class="col-sm-12 flex-item-1col">
+      <div class="col-sm-6">
+        <h2>ABOUT TANZANIA, EAST AFRICA</h2>
+        <p>
+          Tanzania is an East African country known for its beautiful wilderness areas. They include the Serengeti National Park, a safari mecca populated by the “big five” game (elephant, lion, leopard, buffalo, rhino), and Kilimanjaro National Park, home to Africa’s highest mountain. Offshore lie the lush tropical islands of Zanzibar and Mafia Marine Park.
+        </p>
+        <br/>
+        <p>
+          The Mungere School is located 3 hours from Kilimanjaro airport, next to the great rift wall. Swahili is the national language of Tanzania, but by the time students graduate from Mungere, they are trilingual, speaking English, Swahili and their native tribal tongue such as Kimasai, Kirangi or Kichagga.
+        </p>
+        <br/>
+        <p>
+          <em><a href="http://travel.nationalgeographic.com/travel/countries/tanzania-photos/#/african-elephant-tanzania_3648_600x450.jpg" target='_blank'>See some beautiful photos of Tanzania by National Geographic</a>
+          </em></p>
+        </div>
+        <div class="col-sm-6" id="map-container">
+          <div class="" id="map">
+          </div>
+        </div>
       </div>
-    </div>
   </div>
 </div>
 
