--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -213,8 +213,8 @@ h6 {
   line-height: 13px; }
 
 p, li {
-  font-size: 1.2em;
-  line-height: 1.2em;
+  font-size: 1.25em;
+  line-height: 1.5em;
   font-family: "proxima-nova", sans-serif;
   font-weight: 400;
   color: #6f6f6e; }
@@ -223,7 +223,7 @@ p, li {
   color: white; }
 
 .yellow-text {
-  color: #febe10; }
+  color: #febe10 !important; }
 
 .ltyellow-text {
   color: #F2E872; }
@@ -247,7 +247,7 @@ ul .padded li {
     font-weight: 300;
     color: white; }
     .blue li a:hover, .blue p a:hover, .blue h3 a:hover {
-      text-decoration: underline; }
+      text-decoration: none; }
 
 .btn-secondary {
   background-color: white;
