UPdate .blue style to fix buttons and remove underline. Added natgeo id for unique link on school page

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -161,7 +161,7 @@
         </p>
         <br/>
         <p>
-          <em><a href="http://travel.nationalgeographic.com/travel/countries/tanzania-photos/#/african-elephant-tanzania_3648_600x450.jpg" target='_blank'>See some beautiful photos of Tanzania by National Geographic</a>
+          <em><a href="http://travel.nationalgeographic.com/travel/countries/tanzania-photos/#/african-elephant-tanzania_3648_600x450.jpg" target='_blank' id="natgeo">See some beautiful photos of Tanzania by National Geographic</a>
           </em></p>
         </div>
         <div class="col-sm-6" id="map-container">
