--- a/app/assets/stylesheets/sass/1-base/_typography.sass
+++ b/app/assets/stylesheets/sass/1-base/_typography.sass
@@ -116,6 +116,9 @@ ul
   color: white
   padding: 0 0 60px 0
   a
+    &:hover
+      text-decoration: none
+  #natgeo
     color: white
     border-bottom: 1px solid white
   li, p, h3
