--- a/app/views/pages/getcreative.html.erb
+++ b/app/views/pages/getcreative.html.erb
@@ -2,50 +2,52 @@
 <div class="page-banner creative">
   <div class="shadow-box">
     <div class="banner-content page-canvas page-title">
-      <h2>Get <span style="color:#fdbe16;">Creative</span></h2>
+      <h2>get <span style="color:#fdbe16;">Creative</span></h2>
     </div>
   </div>
 </div>
 
   <div class="flex page-canvas">
-    <div class="flex-item-1col intro">
+    <div class="flex-item-1col">
       <h2>FUNDRAISING IDEAS</h2>
       <p class="lead">Here are some simple, impactful ways you can fundraise for your own volunteer trip or directly support Red Sweater Project students.</p>
-    </div>
-  </div>
-  <div class="flex page-canvas">
-    <div class="flex-item-3col space-second">
-      <div class="img-wrapper">
-        <%= image_tag("RUN.jpg", :class => "img-responsive")%>
-      </div>
-      <div class="focusCopy">
-        <h5><strong>1. ORGANIZE OR RUN A RACE</strong></h5>
-        <p>Whether it's 26.2 miles or .05k, a race is a great way to raise funds and support for the work happening at the Mungere School. Wear Red Rhino tee shirts and collect donations by the mile or by the meter.
-        </p>
-      </div>
-    </div>
-    <div class="flex-item-3col space-second">
-      <hr class="mobile-hr yellow-hr">
-      <div class="img-wrapper">
-        <%=image_tag("birthday-cake-380178_640.jpg", :class => "img-responsive")%>
-      </div>
-      <div class="focusCopy">
-        <h5><strong>2. DEDICATE A BIRTHDAY</strong></h5>
-        <p>In lieu of gifts, ask for donations to be made in your name then pat yourself on the back. Your celebration just changed a life!
-        </p>
-      </div>
-    </div>
-    <div class="flex-item-3col space-second">
-      <hr class="mobile-hr yellow-hr">
-      <div class="img-wrapper">
-        <%= image_tag("event_detroit.jpg", :class => "img-responsive")%>
-      </div>
-      <div class="focusCopy">
-        <h5><strong>3. HOST AN EVENT</strong></h5>
-        <p>Make a night of it! Invite friends and family over and let us join the fun! Host your book club, poker night, or wine party and collect donations toward a particular campus project or area of interest.
-        </p>
-      </div>
-      <hr class="mobile-hr">
+      <!-- <div class="col-sm-12"> -->
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="img-wrapper">
+              <%= image_tag("RUN.jpg", :class => "img-responsive")%>
+            </div>
+            <div class="focusCopy">
+              <h5><strong>1. ORGANIZE OR RUN A RACE</strong></h5>
+              <p>Whether it's 26.2 miles or .05k, a race is a great way to raise funds and support for the work happening at the Mungere School. Wear Red Rhino tee shirts and collect donations by the mile or by the meter.
+              </p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <hr class="mobile-hr yellow-hr">
+            <div class="img-wrapper">
+              <%=image_tag("birthday-cake-380178_640.jpg", :class => "img-responsive")%>
+            </div>
+            <div class="focusCopy">
+              <h5><strong>2. DEDICATE A BIRTHDAY</strong></h5>
+              <p>In lieu of gifts, ask for donations to be made in your name then pat yourself on the back. Your celebration just changed a life!
+              </p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <hr class="mobile-hr yellow-hr">
+            <div class="img-wrapper">
+              <%= image_tag("event_detroit.jpg", :class => "img-responsive")%>
+            </div>
+            <div class="focusCopy">
+              <h5><strong>3. HOST AN EVENT</strong></h5>
+              <p>Make a night of it! Invite friends and family over and let us join the fun! Host your book club, poker night, or wine party and collect donations toward a particular campus project or area of interest.
+              </p>
+            </div>
+            <hr class="mobile-hr">
+          </div>
+        </div>
+      <!-- </div> -->
     </div>
   </div>
   <!-- <div class="flex page-canvas">
