--- a/app/assets/stylesheets/sass/3-layouts/_donate.scss
+++ b/app/assets/stylesheets/sass/3-layouts/_donate.scss
@@ -42,22 +42,22 @@
   }
 }
 
-.donate-left {
-  width: 70%;
-  p {
-    padding-bottom: 0;
-    img {
-    width: 20px;
-    padding-left: 7px;
-    }
-  }
-  padding-top: 40px;
-  padding-right: 30px;
-  form input {
-    text-align: left;
-  }
-
-}
+// .donate-left {
+//   width: 70vw;
+//   p {
+//     padding-bottom: 0;
+//     img {
+//     width: 20px;
+//     padding-left: 7px;
+//     }
+//   }
+//   padding-top: 40px;
+//   padding-right: 30px;
+//   form input {
+//     text-align: left;
+//   }
+//
+// }
 
 form.donate-left {
   width: 100%;
